tests/resources/errors/errors22.ac
import std;
import std.Error;

struct TestError :: *Error {
    const char* get_name() const {
        return "TestError";
    }
    const char* get_message() const {
        return "error raised!";
    }
}

void write_val(int val) {

#if OS_GROUP_WINDOWS
    void* handle = std.GetStdHandle(-11);
    uint32 written;
    char c = as(char) val;
    std.WriteFile(handle, &c, 1, &written, null);
#elif OS_GROUP_UNIX
    char c = as(char) val;
    std.write(1, &c, 1);
#endif

}

struct A {

    int f() {
        return 64;
    }

    ~A() {
        std.print("deconstructor called!");
    }
}

A foo(bool b) raises TestError {
    if b {
        raise TestError{};
    } else {
        return A{};
    }
}

void bar(bool b) {
    int a = try foo(b).f() {
        std.print("caught error!");
        return;
    };
    write_val(a);
}

void main() {
    bar(false);
    std.print("...");
    bar(true);
}